[package]
name = "rust_player_checker"
version = "0.6.0"
authors = ["Frederik P. B. H. <frepbh@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", features = [
	"playsoundapi",
	"consoleapi",
	"errhandlingapi",
	"processenv",
	"winbase",
] }
